--- a/pages/confirmacao.html
+++ b/pages/confirmacao.html
@@ -50,38 +50,38 @@
           </div>
 
           <div class="form-item">
-            <label for="razao social">razão social</label>
+            <label for="razaoSocial">razão social</label>
             <input
-              id="razao-social"
+              id="razaoSocial"
               class="input-padrao input-razao-social"
               type="text"
-              name="razao social"
+              name="razaoSocial"
               placeholder="Oliveira Azeites LTDA"
               required
             />
           </div>
 
           <div class="form-item">
-            <label for="cpf do representante">cpf do representante legal</label>
+            <label for="cpfDoRepresentante">cpf do representante legal</label>
             <input
-              id="cpf-do-representante"
+              id="cpfDoRepresentante"
               class="input-padrao input-cpf-do-representante"
               type="text"
-              name="cpf do representante"
+              name="cpfDoRepresentante"
               placeholder="000.000.000-00"
               required
             />
           </div>
 
           <div class="form-item form-item-nome-do-representante">
-            <label for="nome do representante"
+            <label for="nomeDoRepresentante"
               >nome do representante legal</label
             >
             <input
-              id="nome-do-representante"
+              id="nomeDoRepresentante"
               class="input-padrao input-nome-do-representante"
               type="text"
-              name="nome do representante"
+              name="nomeDoRepresentante"
               placeholder="Olivardo Oliveira da Silva"
               required
             />
@@ -90,49 +90,50 @@
           <div class="form-item">
             <label for="apelido">como deseja ser chamado?</label>
             <input
-              id="como-deseja-ser-chamado"
+              id="apelido"
               class="input-padrao input-apelido"
               type="text"
               name="apelido"
               placeholder="SR.Olivardo"
               required
+              maxlength="10"
             />
           </div>
 
           <div class="form-item">
-            <label for="numero de funcionarios"
+            <label for="numeroDeFuncionarios"
               >quantidades de funcionários</label
             >
             <input
-              id="quantia-de-funcionarios"
+              id="numeroDeFuncionarios"
               class="input-padrao input-numero-de-funcionarios"
-              type="text"
-              name="numero de funcionarios"
+              type="number"
+              name="numeroDeFuncionarios"
               placeholder="1.000"
               required
             />
           </div>
 
           <div class="form-item form-item-faturamento-anual">
-            <label for="faturamento anual">faturamento anual</label>
+            <label for="faturamentoAnual">faturamento anual</label>
             <input
-              id="faturamento-anual"
+              id="faturamentoAnual"
               class="input-padrao input-faturamento-anual"
-              type="text"
-              name="faturamento anual"
+              type="number"
+              name="faturamentoAnual"
               placeholder="R$1.000.000,00"
               required
             />
           </div>
           <div class="checkbox-flex">
             <input
-              id="checkbox-item"
+              id="checkboxItem"
               class="checkbox"
               type="checkbox"
-              name="mesmo nome do representante legal"
+              name="mesmoNomeDoRepresentanteLegal"
               required
             />
-            <label for="mesmo nome do representante legal"
+            <label for="mesmoNomeDoRepresentanteLegal"
               >mesmo nome do representante legal</label
             >
           </div>
@@ -145,5 +146,6 @@
         </div>
       </form>
     </main>
+    <script src="../js/script.js"></script>
   </body>
 </html>
